trunk/Archive2/e4/7412a509831141/output
main.cpp:8:4: error: C++ requires a type specifier for all declarations
A::foo=42;
~  ^
main.cpp:13:9: warning: unused variable 'sum' [-Wunused-variable]
    int sum = myA.sum(5);
        ^
1 warning and 1 error generated.
